--- a/index.html
+++ b/index.html
@@ -86,13 +86,6 @@
                     </div>
             </div>
             <div class="bottom-wrap">
-                <div class="about-wrapper">
-                    <div class="about">
-                        <h2>About Us</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris.</p>
-                        <p>Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.</p>
-                      </div>  
-                </div>
                 <div class="contact-wrap">
                     <div class="contactus">
                         <form action="#">
@@ -107,6 +100,27 @@
                         </form>
                     </div>
                 </div>
+                <div class="about-wrapper">
+                    <div class="about">
+                        <div class="timsupp">
+                            <h2>TIM SUPPORT</h2>
+                            <p></p>
+                        </div>
+                        <div class="about-lapor">
+                            <div class="lapor">
+                                <h3>LAPORAN PENYALAHGUNAAN</h3>
+                                <a href ="#"><i class="fa-solid fa-exclamation fa-3x"></i></a>
+                                <p>Hubungi Kami Melalui Email</p>
+                                <p>Untuk Melaporkan penyalahgunaan</p>
+                            </div>
+                            <div class="tanya">
+                                <h3>PERTANYAAN</h3>
+                                <a href ="#"><i class="fa-regular fa-circle-question fa-3x"></i></a>
+                                <p>Hubungi Kami Jika ada pertanyaan</p>
+                                <h4>H5 NEWS</h4>
+                            </div>
+                          </div>
+                    </div>
             </div>
         </main>
         <footer>
