--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <input class="name" type="text" name="" id="">
                             <label for="message">Pesan:</label>
                             <textarea name="" id="" cols="30" rows="5"></textarea>
-                            <button type="submit">Kirim</button>
+                            <button type="submit" class="btn">Kirim</button>
                         </form>
                     </div>
                 </div>
