--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="contact-wrap">
                     <div class="contactus">
                         <form action="#">
-                            <h2>Contact Us</h2>
+                            <h2>Message Us</h2>
                             <label for="name">Name:</label>
                             <input class="name" type="text" name="" id="">
                             <label for="email">Email:</label>
