--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
                     <li><a href="#">Sports</a></li>
                     <li><a href="#">Entertainment</a></li>
                     <li><a href="#">Contact Us</a></li></ul>
-            </nav>
-            
-            <div class="article">
+            </nav><div class="article">
                 <div class="header">
                     <h1>Terkini</h1><hr>
                 </div>
@@ -31,25 +29,28 @@
                         <div class="newsarticle">
                             <h2>Ajudan Pribadi Menyesal soal Penipuan Rp1,3 Miliar</h2>
                             <img src="Image/BeritaPopuler1.JPG" alt="Article Image">
-                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempora maxime ea rem itaque expedita placeat, beatae vero adipisci repudiandae culpa sint laborum velit repellendus temporibus sunt consequatur, voluptas soluta?</a>
-                            <p>Nasional</p>
-                        </div>
-                        <div class="newsarticle">
-                            <h2>Kenapa Kemenangan Michelle Yeoh di Oscar Bukan Cuma Soal Akting?</h2>
-                            <img src="Image/BeritaPopuler2.JPG" alt="Article Image">
-                            <a href="#">Seorang perempuan berambut panjang mengendarai sebuah sepeda motor trail, menyusuri gundukan-gundukan tanah, mencoba menyusul rangkaian gerbong kereta yang berjalan.Perempuan itu lalu tiba-tiba loncat dari tebing tanah itu ke atas atap kereta tersebut. Ia tidak jatuh, ataupun goyah tangannya memegang setir. Ia terus melanjutkan aksinya untuk mengejar penjahat.</a>
-                            <p>Nasional</p>
-                        </div>
-                        <div class="newsarticle">
-                            <h2>Article Title</h2>
-                            <img src="Image/BeritaPopuler3.JPG" alt="Article Image">
-                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempora maxime ea rem itaque expedita placeat, beatae vero adipisci repudiandae culpa sint laborum velit repellendus temporibus sunt consequatur, voluptas soluta?</a>
+                            <a href="#">Selebgram Ajudan Pribadi meminta maaf dan menyesali perbuatannya karena telah melakukan penipuan dan penggelapan senilai Rp1,3 miliar. "Sangat menyesalkan perbuatan kami dan insyallah selesai secepatnya dan saya minta maaf segala-galanya," kata Ajudan Pribadi kepada wartawan, Rabu (15/3).</a>
                             <p>Nasional</p>
                         </div>
                         <div class="newsarticle">
                             <h2>Kenapa Kemenangan Michelle Yeoh di Oscar Bukan Cuma Soal Akting?</h2>
                             <img src="Image/BeritaPopuler4.JPG" alt="Article Image">
-                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempora maxime ea rem itaque expedita placeat, beatae vero adipisci repudiandae culpa sint laborum velit repellendus temporibus sunt consequatur, voluptas soluta?</a>
+                            <a href="#">Seorang perempuan berambut panjang mengendarai sebuah sepeda motor trail, menyusuri gundukan-gundukan tanah, mencoba menyusul rangkaian gerbong kereta yang berjalan.Perempuan itu lalu tiba-tiba loncat dari tebing tanah itu ke atas atap kereta tersebut. Ia tidak jatuh, ataupun goyah tangannya memegang setir. Ia terus melanjutkan aksinya untuk mengejar penjahat.</a>
+                            <p>Internasional</p>
+                        </div>
+                        <div class="newsarticle">
+                            <h2>5 Debutan Timnas Indonesia Lawan Burundi di FIFA Matchday</h2>
+                            <img src="Image/BeritaPopuler3.JPG" alt="Article Image">
+                            <a href="#">Pelatih Timnas Indonesia Shin Tae Yong telah mengumumkan 28 pemain yang disiapkan untuk melawan Burundi di FIFA Matchday. Berikut lima pemain debutan Timnas Indonesia.
+                                        Timnas Indonesia akan beruji coba dua kali melawan Burundi pada 25 dan 28 Maret mendatang. Laga uji coba ini akan berlangsung di Stadion Patriot Candrabhaga, Bekasi.
+                                        Shin Tae Yong tetap memanggil mayoritas pemain yang sudah wara-wiri di Timnas Indonesia. Selain itu, pelatih asal Korea Selatan itu juga memberikan kesempatan buat beberapa debutan.</a>
+                            <p>SPORT</p>
+                        </div>
+                        <div class="newsarticle">
+                            <h2>Jokowi Heran Kemenhan dan Polri Masih Impor Senjata dan Sepatu</h2>
+                            <img src="Image/BeritaPopuler2.JPG" alt="Article Image">
+                            <a href="#">Presiden Jokowi heran impor senjata dan sepatu di Indonesia masih tinggi. Padahal katanya, RI sudah memproduksi dua produk tersebut.
+                                " Saya awal-awal kaget, saya buka, banyak sekali pembelian produk-produk impor kita, padahal sumbernya pembelian itu uang APBN. (Jadi) jangan sampai ini saya minta di Kemenhan, di Polri. Kita ini sudah bikin, ekspor ke semua negara, eh kita malah beli dari luar, sepatu, senjata," ujarnya dalam pembukaan P3DN 2023, Rabu (15/3).</a>
                             <p>Nasional</p>
                         </div>
                     </div>    
@@ -60,28 +61,36 @@
                 </div>
                     <div class="article-list">
                         <div class="newsarticle">
-                            <h2>Article Title</h2>
-                            <img src="Image/BeritaPopuler2.JPG" alt="Article Image">
-                            <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae lorem sed dolor sollicitudin blandit.</a>
+                            <h2>5 Debutan Timnas Indonesia Lawan Burundi di FIFA Matchday</h2>
+                            <img src="Image/BeritaPopuler3.JPG" alt="Article Image">
+                            <a href="#">Pelatih Timnas Indonesia Shin Tae Yong telah mengumumkan 28 pemain yang disiapkan untuk melawan Burundi di FIFA Matchday. Berikut lima pemain debutan Timnas Indonesia.
+                                Timnas Indonesia akan beruji coba dua kali melawan Burundi pada 25 dan 28 Maret mendatang. Laga uji coba ini akan berlangsung di Stadion Patriot Candrabhaga, Bekasi.
+                                Shin Tae Yong tetap memanggil mayoritas pemain yang sudah wara-wiri di Timnas Indonesia. Selain itu, pelatih asal Korea Selatan itu juga memberikan kesempatan buat beberapa debutan.</a>
                             <p>Nasional</p>
                         </div>
                         <div class="newsarticle">
-                            <h2>Article Title</h2>
-                            <img src="Image/BeritaPopuler2.JPG" alt="Article Image">
-                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempora maxime ea rem itaque expedita placeat, beatae vero adipisci repudiandae culpa sint laborum velit repellendus temporibus sunt consequatur, voluptas soluta?</a>
+                            <h2>Reaksi Pedas Netizen ke STY Usai Rilis Skuad Indonesia</h2>
+                            <img src="Image/BeritaPopuler5.JPG" alt="Article Image">
+                            <a href="#">Netizen bereaksi pedas kepada Shin Tae Yong lantaran tidak memanggil sejumlah pemain 'gacor' Liga 1 pada laga FIFA Matchday antara Timnas Indonesia vs Burundi.
+                                PSSI di laman resminya resmi merilis 28 pemain untuk menghadapi Burundi pada kalender FIFA Matchday akhir Maret mendatang.
+                                Shin Tae Yong memanggil sejumlah wajah yang selama ini menjadi langganan di skuad Garuda. Nama-nama seperti Rachmat Irianto, Ricky Kambuaya, Marc Klok, hingga Nadeo Argawinata masuk daftar skuad.</a>
                             <p>Nasional</p>
                         </div>
                         <div class="newsarticle">
-                            <h2>Article Title</h2>
-                            <img src="Image/BeritaPopuler2.JPG" alt="Article Image">
-                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempora maxime ea rem itaque expedita placeat, beatae vero adipisci repudiandae culpa sint laborum velit repellendus temporibus sunt consequatur, voluptas soluta?</a>
-                            <p>Nasional</p>
+                            <h2>Ronaldo Tak Cetak Gol, Pelatih Lawan Protes Soal Wasit</h2>
+                            <img src="Image/BeritaPopuler6.JPG" alt="Article Image">
+                            <a href="#">Pelatih Abha Roel Coumans menyinggung soal wasit setelah anak asuhnya kalah dari Al Nassr yang diperkuat Cristiano Ronaldo.
+                                Abha menelan kekalahan 1-3 dalam laga melawan King's Cup, Selasa (14/3). Dalam pertandingan itu Ronaldo tak mencetak gol.
+                                Tiga gol Al Nassr dilesakkan Sami Al Naji, Abdullah Al Khaibari, dan Mohammed Maran. Sementara gol balasan Abha dibuat Abdulfattah Adam.</a>
+                            <p>Internasional</p>
                         </div>
                         <div class="newsarticle">
-                            <h2>Article Title</h2>
-                            <img src="Image/BeritaPopuler2.JPG" alt="Article Image">
-                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempora maxime ea rem itaque expedita placeat, beatae vero adipisci repudiandae culpa sint laborum velit repellendus temporibus sunt consequatur, voluptas soluta?</a>
-                            <p>Nasional</p>        
+                            <h2>Gaji Messi di Al Hilal Ternyata Sama dengan Ronaldo</h2>
+                            <img src="Image/BeritaPopuler7.JPG" alt="Article Image">
+                            <a href="#">Gaji yang akan diterima Lionel Messi jika menerima tawaran Al Hilal dilaporkan sama dengan yang didapat Cristiano Ronaldo di Al Nassr.
+                                        Isu Messi dikaitkan dengan Al Hilal makin kencang dalam beberapa hari terakhir. Mulanya Messi dilaporkan akan mendapatkan gaji hampir dua kali lipat dari Ronaldo dalam setahun.
+                                </a>
+                            <p>Internasional</p>        
                         </div>
                     </div>
             </div>
