--- a/index.html
+++ b/index.html
@@ -94,6 +94,38 @@
                         </div>
                     </div>
             </div>
+            <div class="article">
+                    <div class="header">
+                        <h1>Entertainment</h1><hr>
+                    </div>
+                        <div class="article-list">
+                            <div class="newsarticle">
+                                <h2>Kenapa Kemenangan Michelle Yeoh di Oscar Bukan Cuma Soal Akting?</h2>
+                                <img src="Image/BeritaPopuler4.JPG" alt="Article Image">
+                                <a href="#">Seorang perempuan berambut panjang mengendarai sebuah sepeda motor trail, menyusuri gundukan-gundukan tanah, mencoba menyusul rangkaian gerbong kereta yang berjalan.Perempuan itu lalu tiba-tiba loncat dari tebing tanah itu ke atas atap kereta tersebut. Ia tidak jatuh, ataupun goyah tangannya memegang setir. Ia terus melanjutkan aksinya untuk mengejar penjahat.</a>
+                                <p>Internasional</p>
+                            </div>
+                            <div class="newsarticle">
+                                <h2>Nani Wijaya Meninggal, Seleb Indonesia Kirim Duka dan Doa</h2>
+                                <img src="Image/BeritaEntertaint1.JPG" alt="Article Image">
+                                <a href="#">Aktris senior Nani Wijaya tutup usia di 79 tahun pada Kamis (16/3) setelah dikonfirmasi oleh anaknya, Cahya Kamila. Kepergian aktris legendaris ini meninggalkan duka yang mendalam bagi rekan-rekan aktor dan aktris Indonesia. Salah satunya adalah Rieke Diah Pitaloka yang merupakan lawan main Nani Wijaya saat membintangi sinetron Bajaj Bajuri.</a>
+                                <p>Nasional</p>
+                            </div>
+                            <div class="newsarticle">
+                                <h2>James gunn "turun gunung" garap superman legacy</h2>
+                                <img src="Image/BeritaEntertaint2.JPG" alt="Article Image">
+                                <a href="#">James Gunn mengonfirmasi dirinya langsung yang akan menggarap film pertama dari DC Studios era kepemimpinannya, Superman: Legacy. Gunn mengatakan Superman: Legacy akan rilis pada 11 Juli 2025. "Ya, saya menyutradarai Superman: Legacy yang akan dirilis pada 11 Juli 2025," tulis James Gunn di Twitter, Kamis (16/3).</a>
+                                <p>Internasional</p>
+                            </div>
+                            <div class="newsarticle">
+                                <h2>Audio Series The Stories Season 2 Siap Mengudara Ramadan 2023</h2>
+                                <img src="Image/BeritaEntertaint3.JPG" alt="Article Image">
+                                <a href="#">Masima Radio Network akan meluncurkan audio series spesial Ramadan berjudul The Stories Season 2: Balada Cerita Ramadan 2023. Audio series ini melanjutkan musim pertama yang sudah tayang pada November 2022.
+                                    The Stories Season 2 akan kembali mengisahkan empat sahabat yang dikenal dengan sebutan PPK alias Para Pencari Kesetiaan.</a>
+                                <p>Nasional</p>        
+                            </div>
+                        </div>
+                    </div>
             <div class="bottom-wrap">
                 <div class="contact-wrap">
                     <div class="contactus">
