--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
     </head>
     <body>
         <header>
-            <h1>H5 News</h1><hr>
-        </header>
-        <main>
+            <h1>H5 News</h1>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">News</a></li>
                     <li><a href="#">Sports</a></li>
                     <li><a href="#">Entertainment</a></li>
-                    <li><a href="#">Contact Us</a></li></ul>
-            </nav><div class="article">
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Log In</a></li>
+                    <li><a href="#">Sign Up</a></li>
+                </ul>                    
+            </nav>
+        </header>
+        <main>
+            <div class="article">
                 <div class="header">
                     <h1>Terkini</h1><hr>
                 </div>
